--- a/css/defalt.css
+++ b/css/defalt.css
@@ -100,3 +100,12 @@
 	width: 380px; height: 678px; background-color: rgba(0,0,0,0.6); position: absolute; left: 0; top: 0;
 	color: #fff; font-size: 28px; text-align: center; line-height: 678px; display: none;
 }
+
+#footer_container {
+	width: 100%; height: 100px; background-color: #000; margin-top: 150px;
+}
+
+
+#footer_container p {
+	color: #fff; font-size: 18px; line-height: 100px; width: 476px; margin: 0 auto;
+}
