--- a/css/defalt.css
+++ b/css/defalt.css
@@ -11,7 +11,7 @@
 }
 
 #header_container .header_inner .gnbWrap ul li {
-	display: inline-block; margin-left: 60px; color: #fff; font-size: 15px; line-height: 90px;
+	display: inline-block; margin-left: 60px; color: #fff; font-size: 15px;
 }
 
 #header_container .header_inner .gnbWrap ul li:hover {
@@ -23,7 +23,11 @@
 }
 
 #header_container .header_inner .gnbWrap ul li a {
-	
+	line-height: 90px;
+}
+
+#body_container .mainpage {
+	width: 100%; height: 1080px; background-image: url(../images/main.jpg); background-attachment: fixed;
 }
 
 #body_container .profile {
@@ -60,7 +64,7 @@
 }
 
 #body_container .profile .profileWrap .profileList li {
-	margin-bottom: 10px;
+	margin-bottom: 10px; font-size: 18px;
 }
 
 #body_container .profile .profileWrap .profileList .snsIco {
@@ -69,6 +73,27 @@
 
 #body_container .profile .profileWrap .profileList .snsIco02 {
 	margin-left: 10px;
+}
+
+#body_container .profile .skills {
+	width: 950px; margin: 0 auto;
+}
+
+#body_container .profile .skills .skillListTit {
+	font-size: 22px; text-align: center; margin-bottom: 48px;
+}
+
+#body_container .profile .skills .skillList .skill {
+	display: inline-block; margin-left: 56px; text-align: center;
+}
+
+#body_container .profile .skills .skillList .skill:first-child {
+	margin-left: 0;
+}
+
+
+#body_container .profile .skills .skillList .skill p {
+	font-size: 18px; margin-top: 26px;
 }
 
 #body_container .project {
